--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: dev
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/auxiliary
+    url: jdbc:mysql://127.0.0.1:3306/auxiliary?useSsl=true&characterEncoding=utf-8
     username: root
     password: 123456
   jpa:
