--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,9 +22,9 @@ spring:
               enable: true
               required: true
 
-logging:
-  level: INFO,DEBUG
-  file: D:/study/JAVA/logs/default.log
+#logging:
+#  level: INFO,DEBUG
+#  file: D:/study/JAVA/logs/default.log
 
 httpClient:
   config:
